# LoadCSV

./: Cargo.toml  config.toml
src/: main.rs
src/models/: connection.rs  csv_model.rs  dossier.rs  export_monitoring.rs  klant.rs  land.rs  mod.rs  ncts_status.rs  ta_monitoring.rs  ta_rapport.rs  tg_monitoring.rs  tg_rapport.rs
