[package]
name = "loadCSV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
csv = "1.2.1"


serde = { version = "^1.0.152", features = ["derive"] }
rbs = { version = "^0.1" }
rbatis = { version = "^4.0" }
rbdc-mssql = "^0.1"

tokio = { version = "1.2.0", features = ["full"] }

#rustls= {version = "*",features = ["dangerous_configuration","quic"] }
#rustls-pemfile = "1.0.0"

native-tls = "0.2"
chrono = "0.4.25"
itertools = "0.10.4"
toml = "0.8.8"
